# hermes-evolve

./: README.md  __init__.py  plugin.yaml  pyproject.toml
hermes_evolve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
